# learning_python

./: bubble_sort_example.py  caesars_cypher.py  caesars_for_len_word.py  coordinates.py  darts_matrix.py  days_in_month.py  hangman.py  magic_ball.py  password_generator.py  poem.txt  pokemon_cards.py  red_output.py  selection_sort_example.py  temp.py  temp2.py  temp3.py  temp4.py  temp5.py  test.py  true_brackets.py
Leetcode/: 1207.py  13.py  136.py  14.py  1704.py  20.py  232.py  26.py  27.py  645.py  ex.py
OOP_learning/: lesson1.py
from_python_tricks_book/: on_finite_generators.py  on_finite_iterators.py  on_infinite_generators.py  on_infinite_iterators.py  python2_compatibility.py
html_div_to_pdf/: custom_html_to_pdf.py  generate_pdf_from_url.py  html_div_to_pdf.py  index.html  learning_qr_code_generation.py  pyproject.toml  qr_with_logo.py  script.js
linked_list/: linked_list_advanced.py  linked_list_initial.py  linked_list_updated.py
stepik_examples/: 123.py  CGPT_help.py  abcd_hierarchy.py  abcdefgh_hierarchy.py  account.py  advanced_list.py  advanced_timer.py  advanced_tuple.py  annual_return_calculator.py  any_class.py  anything.py  atomic.py  attr_dict.py  attrs_iterator.py  attrs_number_obj.py  bank_account.py  basic_plan_hierarchy.py  birth_info.py  birthday_dict.py  bit_array.py  book.py  cached_function.py  caesars_cipher_class.py  calculator.py  case_helper.py  chess_piece.py  circle.py  circle1.py  city_dataclasses.py  closer.py  code_texts.txt  color.py  colored_point.py  conference_lecture.py  config_singleton.py  const.py  count_calls.py  (+180 more)
(+2 files in other folders)
